third_party/move/move-compiler-v2/tests/visibility-checker/pack_unpack_structs.exp

Diagnostics:
error: Invalid pack operation on external type D::G
   ┌─ tests/visibility-checker/pack_unpack_structs.move:13:16
   │
13 │     public fun foo(): C::T {
   │                ^^^
14 │         C::T {g: G{}}
   │                  --- packed here

error: Invalid pack operation on external type C::T
   ┌─ tests/visibility-checker/pack_unpack_structs.move:13:16
   │
13 │     public fun foo(): C::T {
   │                ^^^
14 │         C::T {g: G{}}
   │         ------------- packed here

error: Invalid unpack operation on external type C::T
   ┌─ tests/visibility-checker/pack_unpack_structs.move:16:16
   │
16 │     public fun bar(c: C::T) {
   │                ^^^
17 │         let C::T { g } = c;
   │             ---------- unpacked here

error: Invalid unpack operation on external type D::G
   ┌─ tests/visibility-checker/pack_unpack_structs.move:16:16
   │
16 │     public fun bar(c: C::T) {
   │                ^^^
17 │         let C::T { g } = c;
18 │         let G {} = g;
   │             ---- unpacked here

error: Invalid unpack operation on external type C::T
   ┌─ tests/visibility-checker/pack_unpack_structs.move:20:16
   │
20 │     public fun bar_ref(c: &C::T) {
   │                ^^^^^^^
21 │         let C::T { g } = c;
   │             ---------- unpacked here

error: Invalid unpack operation on external type D::G
   ┌─ tests/visibility-checker/pack_unpack_structs.move:20:16
   │
20 │     public fun bar_ref(c: &C::T) {
   │                ^^^^^^^
21 │         let C::T { g } = c;
22 │         let G {} = g;
   │             ---- unpacked here
